devops/bootstrap_kind_cluster/helm_charts/uptrace/uptrace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptrace-with-tls
  namespace: uptrace
spec:
  tls:
  - hosts:
    - uptrace.codepraxis.dev
    secretName: uptrace-cert-route53-tls
  rules:
    - host: uptrace.codepraxis.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: uptrace
              port:
                number: 14318
